--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -5,109 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZooMagazin</title>
     <link rel="stylesheet" href="../css/page2.css" />
+    <link rel="stylesheet" href="../css/zooakaunt.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      .mod {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.4);
-      }
-
-      .mod-content {
-        background-color: #fff;
-        margin: 10% auto;
-        padding: 20px;
-        border-radius: 25px; /* Закругление модальных окон */
-        width: 80%; /* Адаптивная ширина */
-        max-width: 400px; /* Максимальная ширина */
-        position: relative;
-        text-align: center; /* Центрирование текста */
-      }
-
-      .clos {
-        color: #aaa;
-        position: absolute;
-        top: 10px;
-        right: 20px; /* Смещение крестика левее */
-        font-size: 28px;
-        font-weight: bold;
-        padding: 5px;
-      }
-
-      .clos:hover,
-      .clos:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-      }
-
-      .input-group {
-        position: relative;
-        margin-bottom: 20px;
-      }
-
-      .input-group input {
-        width: 100%;
-        padding: 10px 10px 10px 40px; /* Отступ для иконок */
-        border: none; /* Убираем рамку */
-        border-bottom: 1px solid #ccc; /* Оставляем только нижнюю линию */
-        outline: none;
-        box-sizing: border-box;
-        transition: border-bottom-color 0.3s;
-      }
-
-      .input-group input:focus {
-        border-bottom-color: #ee8b2e;
-      }
-
-      .icon {
-        position: absolute;
-        left: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 20px;
-        height: 20px;
-      }
-      #btn {
-        background-color: #ee8b2e;
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 13px;
-        cursor: pointer;
-        width: 100%;
-        font-weight: bold; /* Жирный текст на кнопках */
-        margin-bottom: 10px;
-      }
-
-      #btn:hover {
-        background-color: #c86100;
-      }
-      .switch-link {
-        color: #ee8b2e;
-        cursor: pointer;
-        font-weight: bold;
-        text-decoration: none;
-        display: inline;
-        padding-top: 10px;
-      }
-
-      .switch-link:hover {
-        color: #c86100;
-        text-decoration: underline;
-      }
-    </style>
   </head>
   <body>
     <header>
